<resources>
    <string name="app_name">RaiffeisenTest</string>
    <string name="search">Search</string>
    <string name="action_settings">Settings</string>

    <string name="error_msg">Sorry! Couldn\'t fetch data!</string>
    <string name="btn_retry">Retry</string>
    <string name="error_msg_no_internet">Not connected to internet!</string>
    <string name="error_msg_timeout">The server took too long to respond!</string>
    <string name="error_msg_unknown">An unexpected error occurred!</string>
    <string name="tap_to_reload">Tap to reload</string>

    <string name="phone_number">Phone Number</string>
    <string name="cell_number">Cell Number</string>
    <string name="email">Email</string>
    <string name="emailSubject">Subject</string>
    <string name="emailTo">To</string>
    <string name="emailMessage">Message:</string>
    <string name="emailYourMessage">Your message here&#8230;</string>
    <string name="sendMessage">Send Message </string>
    <string name="userName">Name</string>
    <string name="address">Address</string>
    <string name="city">City &amp; State</string>
    <string name="postal_code">Postal Code</string>
</resources>
